--- a/example.env
+++ b/example.env
@@ -1,9 +1,28 @@
 # MAKE SURE TO CHANGE THE VALUES BELOW TO YOUR OWN
-# MAKE SURE TO CHANGE THE VALUES BELOW TO YOUR OWN
-# REMOVE THE < > FROM THE VALUES BELOW ALSO
-# REMEMBER TO REMOVE THE "example" text FROM THE FILE NAME
 # REMEMBER TO REMOVE THE "example" text FROM THE FILE NAME
 USERNAMER=<username>
 PASSWORD=<password>
 BETAPASSWORD=<betapassword>
 SERVER=<server> #change it where you want the battlebit server files installed to (ex. /home/username/battlebit)
+
+# MAKE SURE TO CHANGE THE VALUES BELOW TO YOUR OWN
+# The Variables below are for the server config
+SERVER_PATH=/path/to/server/executable
+SERVER_NAME=CHANGE NAME                                            # Server name
+SERVER_PORT=29991                                                  # Server port
+SERVER_HZ=30                                                       # 30, 60, 120 or 144
+SERVER_SAVE_STATS=true                                             # If the server will save user SERVER_SAVE_STATS
+SERVER_DYNAMIC_ROOMS=true                                          # If the server will create rooms dynamically
+SERVER_MAX_PLAYERS=5                                               # Max players per room
+SERVER_PLAYERS_TO_START=5                                          # Min players to start a game
+SERVER_FIRST_ROOM= 1                                               # First room number
+SERVER_DYNAMIC_FIRST_MAP=DustyDew                                  # First map
+SERVER_DYNAMIC_FIRST_GAMEMODE=Conq                                 # First gamemode
+SERVER_DYNAMIC_FIRST_SIZE=ultra                                    # First size
+SERVER_DYNAMIC_FIXED_SIZE=none                                     # Fixed size
+SERVER_BEGINNER_SERVER=false                                       # If the server is a beginner server
+SERVER_DYNAMIC_MAX_SIZE=ultra                                      # Max size
+SERVER_RCON_ENABLED=true                                           # If the server will use RCON
+SERVER_RCON_PASSWORD=1234                                          # RCON password
+SERVER_REGION=Europe_Central                                       # Server region
+SERVER_TESTER_SERVER=false                                         # If the server is a tester server
