Added New Server Var
- MAX PING
- STEAM_WEB_API_KEY

--- a/example.env
+++ b/example.env
@@ -26,3 +26,5 @@ SERVER_RCON_ENABLED=true                                           # If the serv
 SERVER_RCON_PASSWORD=1234                                          # RCON password
 SERVER_REGION=Europe_Central                                       # Server region
 SERVER_TESTER_SERVER=false                                         # If the server is a tester server
+MAX_PING=200                                                       # Max Ping a Player can have on the server
+STEAM_WEB_API_KEY=                                                 # If left blank you will use bbr public key
