Added APPID Var

--- a/example.env
+++ b/example.env
@@ -2,6 +2,7 @@
 # REMEMBER TO REMOVE THE "example" text FROM THE FILE NAME
 USERNAMER=<username>
 PASSWORD=<password>
+APPID=<ID>
 BETAPASSWORD=<betapassword>
 SERVER=<server> #change it where you want the battlebit server files installed to (ex. /home/username/battlebit)
 
