Updated Scripts And ReadMe
Updated to work with Release And Added New Requirements

--- a/example.env
+++ b/example.env
@@ -1,9 +1,9 @@
 # MAKE SURE TO CHANGE THE VALUES BELOW TO YOUR OWN
 # REMEMBER TO REMOVE THE "example" text FROM THE FILE NAME
+# USE A SECOND STEAM ACCOUNT TO RUN SERVER AND THE ACCOUNT NEEDS TO OWN THE GAME
 USERNAMER=<username>
 PASSWORD=<password>
-APPID=<ID>
-BETAPASSWORD=<betapassword>
+APPID=671860
 SERVER=<server> #change it where you want the battlebit server files installed to (ex. /home/username/battlebit)
 
 # MAKE SURE TO CHANGE THE VALUES BELOW TO YOUR OWN
@@ -11,7 +11,7 @@ SERVER=<server> #change it where you want the battlebit server files installed t
 SERVER_PATH=/path/to/server/executable
 SERVER_NAME=CHANGE NAME                                            # Server name
 SERVER_PORT=29991                                                  # Server port
-SERVER_HZ=30                                                       # 30, 60, 120 or 144
+SERVER_HZ=60                                                       # 30, 60, 120 or 144
 SERVER_SAVE_STATS=true                                             # If the server will save user SERVER_SAVE_STATS
 SERVER_DYNAMIC_ROOMS=true                                          # If the server will create rooms dynamically
 SERVER_MAX_PLAYERS=5                                               # Max players per room
@@ -21,11 +21,10 @@ SERVER_DYNAMIC_FIRST_MAP=DustyDew                                  # First map
 SERVER_DYNAMIC_FIRST_GAMEMODE=Conq                                 # First gamemode
 SERVER_DYNAMIC_FIRST_SIZE=ultra                                    # First size
 SERVER_DYNAMIC_FIXED_SIZE=none                                     # Fixed size
-SERVER_BEGINNER_SERVER=false                                       # If the server is a beginner server
 SERVER_DYNAMIC_MAX_SIZE=ultra                                      # Max size
 SERVER_RCON_ENABLED=true                                           # If the server will use RCON
 SERVER_RCON_PASSWORD=1234                                          # RCON password
-SERVER_REGION=Europe_Central                                       # Server region
+SERVER_REGION=<CHANGE>                                      # Server region
 SERVER_TESTER_SERVER=false                                         # If the server is a tester server
 MAX_PING=200                                                       # Max Ping a Player can have on the server
 STEAM_WEB_API_KEY=                                                 # If left blank you will use bbr public key
