--- a/example.env
+++ b/example.env
@@ -1,7 +1,7 @@
 # MAKE SURE TO CHANGE THE VALUES BELOW TO YOUR OWN
 # REMEMBER TO REMOVE THE "example" text FROM THE FILE NAME
 # USE A SECOND STEAM ACCOUNT TO RUN SERVER AND THE ACCOUNT NEEDS TO OWN THE GAME
-USERNAMER=<username>
+USERNAME=<username>
 PASSWORD=<password>
 APPID=671860
 SERVER=<server> #change it where you want the battlebit server files installed to (ex. /home/username/battlebit)
