Added the API ENDPOINT
Added the API ENDPOINT Var for the script

--- a/example.env
+++ b/example.env
@@ -24,7 +24,8 @@ SERVER_DYNAMIC_FIXED_SIZE=none                                     # Fixed size
 SERVER_DYNAMIC_MAX_SIZE=ultra                                      # Max size
 SERVER_RCON_ENABLED=true                                           # If the server will use RCON
 SERVER_RCON_PASSWORD=1234                                          # RCON password
-SERVER_REGION=<CHANGE>                                      # Server region
+SERVER_REGION=<CHANGE>                                             # Server region
 SERVER_TESTER_SERVER=false                                         # If the server is a tester server
 MAX_PING=200                                                       # Max Ping a Player can have on the server
 STEAM_WEB_API_KEY=                                                 # If left blank you will use bbr public key
+API_ENDPOINT=                                                      # where <port> is the port that the listener listens on and the <IP> is the IP of the API server.
