Using the most updated server arguments

--- a/example.env
+++ b/example.env
@@ -1,31 +1,22 @@
 # MAKE SURE TO CHANGE THE VALUES BELOW TO YOUR OWN
 # REMEMBER TO REMOVE THE "example" text FROM THE FILE NAME
 # USE A SECOND STEAM ACCOUNT TO RUN SERVER AND THE ACCOUNT NEEDS TO OWN THE GAME
-USERNAMER=<username>
-PASSWORD=<password>
-APPID=671860
-SERVER=<server> #change it where you want the battlebit server files installed to (ex. /home/username/battlebit)
+USERNAMER=<username>                     # Your Steam username
+PASSWORD=<password>                     # Your Steam password
+APPID=671860                             # The ID of the game you want to host a server for
+BETAPASSWORD=<betapassword>             # Password for beta access (if applicable)
+SERVER=<server>                         # Installation path for the server files
 
 # MAKE SURE TO CHANGE THE VALUES BELOW TO YOUR OWN
 # The Variables below are for the server config
-SERVER_PATH=/path/to/server/executable
-SERVER_NAME=CHANGE NAME                                            # Server name
-SERVER_PORT=29991                                                  # Server port
-SERVER_HZ=60                                                       # 30, 60, 120 or 144
-SERVER_SAVE_STATS=true                                             # If the server will save user SERVER_SAVE_STATS
-SERVER_DYNAMIC_ROOMS=true                                          # If the server will create rooms dynamically
-SERVER_MAX_PLAYERS=5                                               # Max players per room
-SERVER_PLAYERS_TO_START=5                                          # Min players to start a game
-SERVER_FIRST_ROOM= 1                                               # First room number
-SERVER_DYNAMIC_FIRST_MAP=DustyDew                                  # First map
-SERVER_DYNAMIC_FIRST_GAMEMODE=Conq                                 # First gamemode
-SERVER_DYNAMIC_FIRST_SIZE=ultra                                    # First size
-SERVER_DYNAMIC_FIXED_SIZE=none                                     # Fixed size
-SERVER_DYNAMIC_MAX_SIZE=ultra                                      # Max size
-SERVER_RCON_ENABLED=true                                           # If the server will use RCON
-SERVER_RCON_PASSWORD=1234                                          # RCON password
-SERVER_REGION=<CHANGE>                                             # Server region
-SERVER_TESTER_SERVER=false                                         # If the server is a tester server
-MAX_PING=200                                                       # Max Ping a Player can have on the server
-STEAM_WEB_API_KEY=                                                 # If left blank you will use bbr public key
-API_ENDPOINT=                                                      # where <port> is the port that the listener listens on and the <IP> is the IP of the API server.
+SERVER_PATH=/path/to/server/executable      # Path to your server executable
+SERVER_NAME="Test Server"                   # Name for your server
+SERVER_PORT=29992                           # Port number for the server
+SERVER_HZ=60                                # Server tick rate (Hz)
+SERVER_ANTICHEAT=EAC                        # Anti-cheat system to use
+SERVER_MAX_PING=500                         # Maximum allowed player ping
+SERVER_VOXEL_MODE=false                     # Whether voxel mode is enabled (true/false)
+SERVER_API_ENDPOINT=XXX.XXX.XXX.XXX:29294   # API endpoint for the server
+SERVER_FIXED_SIZE=tiny                      # Server size
+SERVER_FIRST_GAMEMODE=TDM                   # Initial game mode
+SERVER_FIRST_MAP=Azagor                     # Initial map
