Added Branch To .env

--- a/example.env
+++ b/example.env
@@ -5,6 +5,7 @@ USERNAMER=<username>                     # Your Steam username
 PASSWORD=<password>                     # Your Steam password
 APPID=671860                             # The ID of the game you want to host a server for
 BETAPASSWORD=<betapassword>             # Password for beta access (if applicable)
+BRANCH=<branchname>                           # Game Server Branch
 SERVER=<server>                         # Installation path for the server files
 
 # MAKE SURE TO CHANGE THE VALUES BELOW TO YOUR OWN
